<resources>
    <string name="app_name">My Ecommerce</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="highly_rated">Highly Rated</string>
    <string name="new_title">New</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an Account? Create one</string>
    <string name="have_account">Already have an Account? Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="subtotal">Subtotal</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="gst">GST</string>
    <string name="pst">PST</string>
    <string name="proceed_checkout">Proceed to Checkout</string>
    <string name="place_your_order">Place your Order</string>
    <string name="your_order">Your Order</string>
    <string name="billing_info">Billing Info</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="address">Address</string>
    <string name="shipping">Shipping</string>
    <string name="two_day_shipping">2 Day Shipping</string>
    <string name="three_day_shipping">3 Day Shipping</string>
</resources>
