<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_rv_popular"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_home_rv_new"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_rv_popular">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_rv_trending"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_rv_new">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_home_rv_highly_rated"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_rv_trending">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/fragment_home_tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/popular"
            app:layout_constraintBottom_toTopOf="@+id/fragment_home_rv_popular"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragment_home_tv_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/trending"
            app:layout_constraintBottom_toTopOf="@+id/fragment_home_rv_trending"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragment_home_tv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/new_title"
            app:layout_constraintBottom_toTopOf="@+id/fragment_home_rv_new"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragment_home_tv_highly_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/highly_rated"
            app:layout_constraintBottom_toTopOf="@+id/fragment_home_rv_highly_rated"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>