<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/row_order_item_iv_product_image"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/row_order_item_tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row_order_item_iv_product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_order_item_tv_item_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/row_order_item_tv_quantity" />

    <TextView
        android:id="@+id/row_order_item_tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        app:layout_constraintEnd_toStartOf="@+id/row_order_item_tv_item_total"
        app:layout_constraintTop_toBottomOf="@+id/row_order_item_tv_product_name" />

    <TextView
        android:id="@+id/row_order_item_tv_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/price"
        app:layout_constraintEnd_toStartOf="@+id/row_order_item_tv_quantity"
        app:layout_constraintTop_toTopOf="@+id/row_order_item_tv_quantity" />

    <TextView
        android:id="@+id/row_order_item_tv_price_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="16dp"
        android:text="$0.00"
        app:layout_constraintStart_toEndOf="@+id/row_order_item_iv_product_image"
        app:layout_constraintTop_toBottomOf="@+id/row_order_item_tv_price_title" />

    <TextView
        android:id="@+id/row_order_item_tv_total_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="16dp"
        android:text="$0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_order_item_tv_item_total" />

    <TextView
        android:id="@+id/row_order_item_tv_quantity_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:layout_marginTop="16dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_order_item_tv_quantity" />

</android.support.constraint.ConstraintLayout>