<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_product_display_tv_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/fragment_product_display_iv_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragment_product_display_iv_star"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toStartOf="@+id/fragment_product_display_tv_review_rating"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/fragment_product_display_tv_review_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragment_product_display_iv_displayed_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_tv_product_name"
            app:srcCompat="@android:color/holo_blue_dark" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_product_display_rv_thumbnails"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_iv_displayed_image">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/fragment_product_display_tv_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_tv_descirption" />

        <ListView
            android:id="@+id/fragment_product_display_lv_reviews"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_tv_reviews" />

        <TextView
            android:id="@+id/fragment_product_display_tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/reviews"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_tv_description" />

        <TextView
            android:id="@+id/fragment_product_display_tv_descirption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_et_quantity" />

        <TextView
            android:id="@+id/fragment_product_display_tv_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_rv_thumbnails" />

        <TextView
            android:id="@+id/fragment_product_display_tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            app:layout_constraintStart_toEndOf="@+id/fragment_product_display_tv_price_title"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_rv_thumbnails" />

        <TextView
            android:id="@+id/fragment_product_display_subtotal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/subtotal"
            app:layout_constraintStart_toEndOf="@+id/fragment_product_display_tv_quantity"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_rv_thumbnails" />

        <TextView
            android:id="@+id/fragment_product_display_tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="$0.00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_tv_price_title" />

        <EditText
            android:id="@+id/fragment_product_display_et_quantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/fragment_product_display_tv_price"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_tv_quantity" />

        <TextView
            android:id="@+id/fragment_product_display_tv_subtotal_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="$0.00"
            app:layout_constraintStart_toEndOf="@+id/fragment_product_display_et_quantity"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_subtotal_title" />

        <Button
            android:id="@+id/fragment_product_display_btn_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_display_rv_thumbnails" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>