<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/row_cart_item_iv_product_image"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/row_cart_item_tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/row_cart_item_ib_remove_item"
        app:layout_constraintStart_toEndOf="@+id/row_cart_item_iv_product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/row_cart_item_ib_remove_item"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/row_cart_item_tv_item_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/row_cart_item_tv_quantity" />

    <EditText
        android:id="@+id/row_cart_item_et_quantity_input"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/row_cart_item_tv_quantity"
        tools:layout_editor_absoluteX="224dp" />

    <TextView
        android:id="@+id/row_cart_item_tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        app:layout_constraintEnd_toStartOf="@+id/row_cart_item_tv_item_total"
        app:layout_constraintTop_toBottomOf="@+id/row_cart_item_tv_product_name" />

    <TextView
        android:id="@+id/row_cart_item_tv_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/price"
        app:layout_constraintEnd_toStartOf="@+id/row_cart_item_tv_quantity"
        app:layout_constraintTop_toTopOf="@+id/row_cart_item_tv_quantity" />

    <TextView
        android:id="@+id/row_cart_item_tv_price_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="$0.00"
        app:layout_constraintEnd_toStartOf="@+id/row_cart_item_et_quantity_input"
        app:layout_constraintTop_toBottomOf="@+id/row_cart_item_tv_price_title" />

    <TextView
        android:id="@+id/row_cart_item_tv_total_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="$0.00"
        app:layout_constraintStart_toEndOf="@+id/row_cart_item_et_quantity_input"
        app:layout_constraintTop_toBottomOf="@+id/row_cart_item_tv_item_total" />

</android.support.constraint.ConstraintLayout>